--- a/package.json
+++ b/package.json
@@ -7,9 +7,12 @@
     "dev": "nodemon index"
   },
   "dependencies": {
+    "bcryptjs": "^2.4.3",
     "dotenv": "^8.2.0",
     "ejs": "^3.1.3",
     "express": "^4.17.1",
+    "express-session": "^1.17.1",
+    "moment": "^2.27.0",
     "mysql2": "^2.1.0",
     "sequelize": "^6.3.3",
     "slugify": "^1.4.5"
